k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techie-d
  labels:
    app: techie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techie
  template:
    metadata:
      labels:
        app: techie
    spec:
      imagePullSecrets:
        - name: regcrednheek
      containers:
        - name: techie
          image: reg.nheek.com/nheek/techie:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "10Mi"
              cpu: "40m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 10
